# jarvis

./: README.md  pyproject.toml
src/jarvis/: .env.example  main.py
src/jarvis/config/: setting.py
src/jarvis/core/: autenticador.py  env.py  executor.py  interface.py  interpretador.py  jarvis.py  locutor.py  ouvido.py
src/jarvis/data/: clima.db  jarvis.db
src/jarvis/database/: GerenciadorTerminal.py  gerenciador.py
src/jarvis/interfaces/: base.py  telegram.py  terminal.py
src/jarvis/login/: base.py  terminal.py
src/jarvis/modulos/: base.py
src/jarvis/modulos/baixarimagens/: google.py
src/jarvis/modulos/clima/: clima.py  diashistoricos.py  historico.py  previsao.py  previsaodia.py  previsaografico.py  previsaohora.py
src/jarvis/modulos/editarimagens/: pretoebranco.py
src/jarvis/modulos/matematica/: dividir.py  multiplicar.py  soma.py  subtrair.py
src/jarvis/motores/: base.py  cohere.py  tfidf.py
src/jarvis/voz/: base.py  edge_voz.py  gtts_voz.py
